# CLIF-donor-identifier

./: .gitignore  README.md  pyproject.toml
code/: 01_cohort_identification.ipynb  01_potential_donor_identifier.ipynb  01_potential_donor_identifier.py  01_potential_donor_identifier_duckdb.ipynb  02_calc_criteria.ipynb  02_srtr_linkage.ipynb  03_table_one.ipynb  README.md  donor_distribution.Rmd  regenerate_tables.py
code/templates/Python/: 01_cohort_identification.ipynb
config/: config_template.json  hospital_provider_mapping.json  outlier_config.yaml  srtr_clif_data_requirements.yaml
docs/superpowers/plans/: 2026-05-06-niddk-aim1-kidney-tables.md
docs/superpowers/specs/: 2026-05-06-niddk-aim1-kidney-tables-design.md
tests/: conftest.py  test_kdpi.py
utils/: cohort_visualizations.py  icd10_comorbidities.csv  icd10_contraindications.csv  icd_dx_exclu.csv  io.py  kdpi.py  outlier_handler.py  srtr_linkage.py  strobe_diagram.py  table1_clif_donors.html  table_one.py
