[project]
name = "clif-donor-identifier"
version = "2.1.0"
description = "CLIF Epidemiology of Potential and Actual Deceased Organ Donors"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
    "matplotlib>=3.7.0",
    "pyarrow>=12.0.0",
    "jupyter>=1.0.0",
    "matplotlib-venn>=1.1.2",
    "clifpy>=0.3.1",
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
